test/e2e/testdata/httproute-with-dynamic-resolver-backend-with-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-with-dynamic-resolver-backend-tls
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-dynamic-resolver-tls
    matches:
    - path:
        type: PathPrefix
        value: /with-tls
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: backend-dynamic-resolver-tls
  namespace: gateway-conformance-infra
spec:
  type: DynamicResolver
  tls:
    caCertificateRefs:
    - name: backend-ca-certificate
      group: ""
      kind: ConfigMap
---
# req -x509 -sha256 -nodes -days 36500 -newkey rsa:2048 -subj '/O=example Inc./CN=example.com' -keyout ca.key -out ca.crt
apiVersion: v1
kind: ConfigMap
metadata:
  name: backend-ca-certificate
  namespace: gateway-conformance-infra
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDPTCCAiWgAwIBAgIUcpXGG2fJigPwvq46BxmVmgxlGxQwDQYJKoZIhvcNAQEL
[...]
    gFEPoFIv6ijfvPhUytPUBr4=
    -----END CERTIFICATE-----
---
# cat > openssl.conf  <<EOF
# [req]
# req_extensions = v3_req
# prompt = no
#
# [v3_req]
# keyUsage = keyEncipherment, digitalSignature
# extendedKeyUsage = serverAuth
# subjectAltName = @alt_names
# [alt_names]
# DNS.1 = backend-dynamic-resolver-tls
# DNS.2 = backend-dynamic-resolver-tls.gateway-conformance-infra
# DNS.3 = backend-dynamic-resolver-tls.gateway-conformance-infra.svc.cluster.local
# EOF
#
# openssl req -out backend-dynamic-resolver-tls.csr -newkey rsa:2048 -nodes -keyout backend-dynamic-resolver-tls.key -subj "/CN=backend-dynamic-resolver-tls/O=example organization"
# openssl x509 -req -days 36500 -CA ca.crt -CAkey ca.key -set_serial 0 -in backend-dynamic-resolver-tls.csr -out backend-dynamic-resolver-tls.crt -extfile openssl.conf -extensions v3_req
apiVersion: v1
kind: Secret
metadata:
  name: backend-certificate
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVCakNDQXU2Z0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREF0TVJVd0V3WURWUVFLREF4bGVHRnQKY0d4bElFbHVZeTR4RkRBU0JnTlZCQU1NQzJWNFlXMXdiR1V1WTI5dE1DQVhEVEkxTURVd01qQTRNakExTUZvWQpEekl4TWpVd05EQTRNRGd5TURVd1dqQkdNU1V3SXdZRFZRUUREQnhpWVdOclpXNWtMV1I1Ym1GdGFXTXRjbVZ6CmIyeDJaWEl0ZEd4ek1SMHdHd1lEVlFRS0RCUmxlR0Z0Y0d4bElHOXlaMkZ1YVhwaGRHbHZiakNDQVNJd0RRWUoKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBSyt6WEZreW5TK0VXT1VPOVVnVlVGcGo1b1lnYklaTAoxVXBvWWhsbHZHVk1Fa [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQ3ZzMXhaTXAwdmhGamwKRHZWSUZWQmFZK2FHSUd5R1M5VkthR0laWmJ4bFRCSk1SQy8wOG5vS2VZRy9BN2tzaHFDOURsWGdRZ09HNzE0bwpucTZOU21TZXFoY2w3VXJvRVhuT0Z6bkxHbldzaGxuZEF2UDRZUzdqSDNrdjNQdVNubjBlaVNIRzZESmFHWkxNCi9oSFBQRjQ3eXIwWTlHelRsQmNRNUIzM0IrYTVlNVhQNGZQb25BL1cvb3VGOWYvYVNtR0wvekJSWk81Tm9FMVgKemtMQjVRekxCbXZHdlJFOGhvUXFwaXdKdW9WSGxBTGgvaVhEYmNCZEJocUhCQThaVHdMNStTYUFFWGplTXdXcAoyRTlOdk5kcGFvZWg1d [...]
---
apiVersion: v1
kind: Service
metadata:
  name: backend-dynamic-resolver-tls
  namespace: gateway-conformance-infra
spec:
  selector:
    app: backend-dynamic-resolver-tls
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dynamic-resolver-tls
  namespace: gateway-conformance-infra
  labels:
    app: backend-dynamic-resolver-tls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-dynamic-resolver-tls
  template:
    metadata:
      labels:
        app: backend-dynamic-resolver-tls
    spec:
      containers:
      - name: tls-backend
        image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.1.0
        volumeMounts:
        - name: secret-volume
          mountPath: /etc/secret-volume
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: SERVICE_NAME
          value: tls-backend-2
        - name: TLS_SERVER_CERT
          value: /etc/secret-volume/crt
        - name: TLS_SERVER_PRIVKEY
          value: /etc/secret-volume/key
        resources:
          requests:
            cpu: 10m
      volumes:
      - name: secret-volume
        secret:
          secretName: backend-certificate
          items:
          - key: tls.crt
            path: crt
          - key: tls.key
            path: key
